Add 404 image for username search

--- a/app/partials/user.html
+++ b/app/partials/user.html
@@ -1,5 +1,5 @@
 <div class="container username" ng-controller="UserCtrl">
-  <img ng-src="{{avatar_url}}" class="avatar_url">
+  <img ng-src="{{avatarUrl}}" class="avatar_url">
   <form ng-submit="submit()">
     <input ng-model="username" type="text" placeholder="GitHub username"
     select-on-click>
