--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,30 +1,13 @@
-/* app css stylesheet */
-
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+.username {
+  width: 100%;
 }
 
-.menu:before {
-  content: "[";
+.username img {
+  float: right;
 }
 
-.menu:after {
-  content: "]";
+.username .avatar_url {
+  height: 120px;
+  width: 120px;
 }
 
-.menu > li {
-  display: inline;
-}
-
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
-}
