Add link to avatar image

--- a/app/partials/user.html
+++ b/app/partials/user.html
@@ -1,5 +1,7 @@
 <div class="container username" ng-controller="UserCtrl">
-  <img ng-src="{{user.avatar_url}}" class="avatar_url">
+  <a ng-href="{{user.html_url}}" target="_blank">
+    <img ng-src="{{user.avatar_url}}" class="avatar_url">
+  </a>
   <form ng-submit="submit()">
     <input ng-model="username" type="text" placeholder="GitHub username"
     select-on-click>
