Split UserCtrl to UsernameCtrl (setter) and UserCtrl (getter).

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,12 +1,12 @@
 .username {
-  width: 100%;
+  float: left;
 }
 
-.username img {
+.user img {
   float: right;
 }
 
-.username .avatar_url {
+.user .avatar_url {
   height: 120px;
   width: 120px;
 }
