--- a/app/partials/user.html
+++ b/app/partials/user.html
@@ -1,10 +1,5 @@
-<div class="container username" ng-controller="UserCtrl">
+<div ng-controller="UserCtrl" class="user">
   <a ng-href="{{user.html_url}}" target="_blank">
     <img ng-src="{{user.avatar_url}}" class="avatar_url">
   </a>
-  <form ng-submit="submit()">
-    <input ng-model="username" type="text" placeholder="GitHub username"
-    select-on-click>
-    <input type="submit" ng-disabled="!username.length" ng-hide="true">
-  </form>
 </div>
