--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -1,4 +1,4 @@
-<div ng-controller="UserCtrl" class="user">
+<div class="user">
   <a ng-href="{{user.html_url}}" target="_blank">
     <img ng-src="{{user.avatar_url}}" class="avatar_url">
   </a>
