Got basic viz working with test data

--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -12,8 +12,4 @@
   </form>
 </div>
 
-<ul>
-  <li ng-repeat="follower in following">{{follower.login}}</li>
-</ul>
-
-<night-sky data="following"></night-sky>
+<night-sky data="constellation"></night-sky>
