--- a/app/css/app.css
+++ b/app/css/app.css
@@ -14,3 +14,13 @@
   left: auto;
   right: auto;
 }
+
+.link {
+  stroke: #ccc;
+}
+
+.node text {
+  pointer-events: none;
+  font: 10px sans-serif;
+}
+
