--- a/app/css/app.css
+++ b/app/css/app.css
@@ -17,12 +17,11 @@
   z-index: -1;
 }
 
-.link {
+.chart .link {
   stroke: #ccc;
 }
 
 .node text {
-  pointer-events: none;
+  /* pointer-events: none; */
   font: 10px sans-serif;
 }
-
