--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,3 +1,7 @@
+body {
+  font: 10px sans-serif;
+}
+
 .username {
 }
 
@@ -24,5 +28,15 @@
 .node text {
   /* pointer-events: none; */
   cursor: pointer;  
-  font: 10px sans-serif;
+}
+
+.limit {
+  position: absolute;
+  bottom: 0px;
+  right: 5px;
+  z-index: -2;
+}
+
+.limit.over {
+  text-color: coral;
 }
