--- a/app/css/app.css
+++ b/app/css/app.css
@@ -31,12 +31,17 @@ body {
 }
 
 .limit {
+  font-size: 15px;
   position: absolute;
+  text-align: center;
   bottom: 0px;
-  right: 5px;
+  left: 0px;
+  width: 100%;
+  opacity: 0.5;
   z-index: -2;
 }
 
-.limit.over {
-  text-color: coral;
+.over {
+  background: black;
+  color: coral;
 }
