--- a/css/app.css
+++ b/css/app.css
@@ -31,12 +31,37 @@ body {
 }
 
 .limit {
+  font-size: 15px;
   position: absolute;
+  text-align: center;
   bottom: 0px;
-  right: 5px;
+  left: 0px;
+  width: 100%;
+  opacity: 0.5;
   z-index: -2;
 }
 
-.limit.over {
-  text-color: coral;
+.over {
+  background: black;
+  color: coral;
+}
+
+.instructions {
+  text-align: center;
+  font-size: 16px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 600px;
+  z-index: 1;
+}
+
+.rounded-corners {
+  -moz-border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -khtml-border-radius: 20px;
+  border-radius: 20px;
+}
+
+.message {
+  background: lightblue;
 }
