--- a/partials/main.html
+++ b/partials/main.html
@@ -26,6 +26,9 @@
     Keep in mind there is a limit on the number of API queries you can make to
     GitHub (the status will be updated at the bottom of the screen).
     </p>
+    <p>
+    If you'd like to see the source, check out the repo on (ofcourse) <a
+    href="https://github.com/rowanu/constellations">GitHub</a>.
   </div>
 </div>
 
